--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,13 @@
 		Hello, mdfka's! lul !!
 		<h1>hi hi hi</h1>
 		<h6> Ha szejsc</h6>
+		Unordered list<ul>
+		<li>Pierwsze</li>
+		<li>Drugie</li>
+		<li>Trzecie</li></ul>
+		Ordered list<ol>
+		<li>Pierwsze</li>
+		<li>Moze trzecie</li>
+		<li>Moze Czwarte</li></ol>
 	</body>
 </html>
