added files from fridays lesson

--- a/table.html
+++ b/table.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
+<head>
+	<title> some cats table </title>
+	<style>
+		table {
+			border: 2px solid blue;
+			border-collapse: collapse;
+			width: 50%;
+		}
+		th {
+			text-color:red;
+			padding: 5px;
+			background-color: lightgray;
+		}
+	</style>
+</head>
 <h1>Koty</h1>
 <table>
  <tr>
