--- a/project0/boot-test.html
+++ b/project0/boot-test.html
@@ -11,7 +11,12 @@
     <title>Hello, world!</title>
   <style>
 	.row {
-		background-color:grey;}
+		background-color:white;}
+	#nestedrow {
+		background-color:white;}
+	.border {
+		border: 2px blue;
+	}
   </style>
   </head>
   <body>
@@ -31,15 +36,16 @@
       One of three columns
     </div>
     <div class="col">
-      One of three columns
+      <span class="border border-info">One of three columns</span>
     </div>
   </div>
 </div>
+<br>
   <div class="container">
   <div class="row">
     <div class="col-sm-9">
       Level 1: .col-sm-9
-      <div class="row">
+      <div id="nestedrow" class="row">
         <div class="col-8 col-sm-6">
           Level 2: .col-8 .col-sm-6
         </div>
