added some cool buttons and shit

--- a/project0/index.html
+++ b/project0/index.html
@@ -41,7 +41,7 @@
 		OSCP NOTES
 			<div class="row justify-content-center">
 				<div id="col2" class="col-1 col-sm-2">
-					<span class="text1">Enumeration</span>
+					<span class="text1"><a href=./exercise.html>Enumeration</a></span>
 				</div>
 				<div id="col2" class="col-1 col-sm-2">
 					<span class="text1">Escalation</span>
